--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
   <b style="color: magenta;">Cor Magenta = Falta completar os bytes</b> |
   <b style="color: green;">Cor Verde = Texto pronto!</b>
 </p>
+    <p>- Revise o texto se ele está completo, antes de passar para a proxima linha!.</p>
     <p>- Para salvar, clique em "Salvar texto" e será gerado um novo arquivo em .txt.</p>
     <p>- Desenvolvido por LOBO NINTENDISTA!</p>
 
